--- a/vr_works.html
+++ b/vr_works.html
@@ -91,7 +91,7 @@
                                 <p>Google Cardboard is a virtual reality (VR) platform developed by Google for use with a head mount for a smartphone.<br><br>
                                 Named for its fold-out cardboard viewer, the platform is intended as a low-cost system to encourage interest and development in VR applications. Users can either build their own viewer from simple, low-cost components using specifications published by Google, or purchase a pre-manufactured one. The viewer is used by placing a smartphone into the back of it and viewing through the lenses in the front.</p>
                             </div>
-                            <figure class="fig_dev1"></figure>
+                            <figure class="fig_dev1 fade"></figure>
                         </div>
                         <div class="device_back">
                             <div class="device2" id="face">
@@ -101,7 +101,7 @@
 
                                     The positional tracking system, called "Constellation", is performed by a USB stationary infrared sensor that is picking up light that is emitted by IR LEDs that are integrated into the hmd. The sensor normally sits on the user's desk. This creates 3D space, allowing for the user to use the Rift while sitting, standing, or walking around the same room.</p>
                                 </div>
-                                <figure class="fig_dev2"></figure>
+                                <figure class="fig_dev2 fade"></figure>
                             </div>
                         </div>
                         <div class="device1" id="sam">
@@ -111,7 +111,7 @@
 
                                 The Gear VR headset also includes a touchpad and back button on the side, as well as a proximity sensor to detect when the headset is on.The touchpad and button allow for a standard minimum input capability for users to interact with the virtual environments, whereas Google Cardboard devices only feature a button.</p>
                             </div>
-                            <figure class="fig_dev3"></figure>
+                            <figure class="fig_dev3 fade"></figure>
                         </div>
                         <div class="device_back">
                             <div class="device2" id="htc">
@@ -121,7 +121,7 @@
 
                                     The Vive has a refresh rate of 90 Hz. The device uses two screens, one per eye, each having a resolution of 1080x1200. The device uses more than 70 sensors including a MEMS gyroscope, accelerometer and laser position sensors, and is said to operate in a 15 feet by 15 feet (4.6 meters by 4.6 meters) tracking space if used with both "Lighthouse" base stations that track the user's movement with sub-millimeter precision.</p>
                                 </div>
-                                <figure class="fig_dev4"></figure>
+                                <figure class="fig_dev4 fade"></figure>
                             </div>
                         </div>
                         <div class="device1" id="sony">
@@ -131,7 +131,7 @@
 
                                 PlayStation VR works with either the standard DualShock 4 controller or the PlayStation Move controllers.The PlayStation VR has a 5.7 inch OLED panel, with an RGB sub-pixel matrix resolution of 1080p, or 960 × 1080 × RGB per eye. The headset also has a processor box which enables the Social Screen video output to the television, as well as process the 3D audio effect, and uses a 3.5mm headphone jack. The headset also has 9 positional LEDs on its surface for the PlayStation Camera to track 360 degree head movement, and connects to the PlayStation by HDMI or USB.</p>
                             </div>
-                            <figure class="fig_dev5"></figure>
+                            <figure class="fig_dev5 fade"></figure>
                         </div>
                     </div>
                 </section>
@@ -234,6 +234,7 @@
         <script src="js/jquery.scrollUp.min.js"></script>
 		<script src="js/waypoints.min.js"></script>
         <script src="js/scroll.js"></script>
+        <script src="js/parallax-fade.js"></script>
         <script>
             $(function () {
                   $.scrollUp({
